name:                alphabetorder
version:             0.1.0.0
synopsis:            Simple interactive "game" to test your knowledge of English letter ordering
description:         Prompts you to pick which letter comes first in the alphabet out of a pair
homepage:            http://github.com/zenhoth/alphabetorder#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexander Borysov
maintainer:          borysovalexander@gmail.com
copyright:           Copyright: (c) 2018 Alexander Borysov
category:            Education
build-type:          Simple
cabal-version:       >=1.10

executable alphabetorder
  hs-source-dirs:      .
  main-is:             AlphabetOrder.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , random
                     , ncurses
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zenhoth/alphabetorder
